[gd_scene load_steps=2 format=3 uid="uid://bwjvjabhwi8fg"]

[ext_resource type="Script" path="res://shift/upgrade_ui.gd" id="1_ig6xw"]

[node name="UpgradeUI" type="HBoxContainer"]
script = ExtResource("1_ig6xw")

[node name="Description" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Edit in .tres"

[node name="BuyButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
text = "Buy"

[node name="CostLabel" type="Label" parent="BuyButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "Edit in .tres"
horizontal_alignment = 1

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
